RESOLVED FIXED274653
[Invalidation] Removed redundant "normal child needs layout" invalidation for out of flow boxes
https://bugs.webkit.org/show_bug.cgi?id=274653
Summary [Invalidation] Removed redundant "normal child needs layout" invalidation for...
alan
Reported 2024-05-24 07:38:05 PDT
ssia
Attachments
Patch (2.19 KB, patch)
2024-05-24 07:39 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Patch (2.29 KB, patch)
2024-05-24 09:12 PDT, alan
no flags
alan
Comment 1 2024-05-24 07:39:50 PDT
alan
Comment 2 2024-05-24 09:12:10 PDT
Created attachment 471500 [details] [fast-cq]Patch
EWS
Comment 3 2024-05-27 05:51:18 PDT
Committed 279348@main (6805653e8b23): <https://commits.webkit.org/279348@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471500 [details].
Radar WebKit Bug Importer
Comment 4 2024-05-27 05:52:14 PDT
Note You need to log in before you can comment on or make changes to this bug.