[Invalidation] Removed redundant "normal child needs layout" invalidation for out of flow boxes https://bugs.webkit.org/show_bug.cgi?id=274653

Reviewed by Antti Koivisto.

See comment in attachToRenderElementInternal.

* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::attachToRenderElementInternal):

Canonical link: https://commits.webkit.org/279348@main